<?xml version="1.0"?>
<package>
  <name>LAStools</name>
  <version>1.1.1</version>
  <description>SLAM</description>
  <maintainer email="simo.grohn@silvere.com">Simo Gröhn</maintainer>
  <license>Copyright 2017- Silvere</license>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
</package>
